<?xml version="1.0" encoding="utf-8"?>
<FrameLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:ems="15"
        android:inputType="textPersonName"
        android:textSize="30sp"
        android:text="@string/number_1" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="15"
        android:textSize="30sp"

        android:inputType="textPersonName"
        android:text="@string/number_2" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textSize="30sp"
        android:ems="15"
        android:inputType="textPersonName"
        android:text="@string/number_3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="10dp"
        android:textSize="50sp"
        android:text="@string/plus" />
    <Button
        android:id="@+id/button6"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="200dp"
        android:layout_marginStart="220dp"
        android:textSize="30sp"
        android:text="@string/minus" />
    <Button
        android:id="@+id/button7"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="10dp"
        android:textSize="30sp"
        android:text="@string/mult" />

    <Button
        android:id="@+id/button8"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="400dp"
        android:layout_marginStart="220dp"
        android:textSize="30sp"
        android:text="@string/div" />


</FrameLayout>


